--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,97 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=PT+Mono&family=PT+Sans+Caption:wght@400;700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+/* CSS Reset */
+*,
+*::after,
+*::before {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  list-style: none;
+  text-decoration: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/* Scroll Bar */
+::-webkit-scrollbar {
+  width: 0.5rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--color-highlight);
+}
+
+::-webkit-scrollbar-track {
+  background: var(--color-dark);
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+/* Global Variables */
+:root {
+  /* Colors */
+  --color-bg: #242933;
+  --color-dark: #16181F;
+  --color-light: #FFFFFF;
+  --color-primary: #EEE8AA;
+  --color-secondary: #D9D9D9;
+  --color-highlight: #B0C4DE;
+
+  /* Transition */
+  --transition-btn: all 0.3s ease-in-out;
+
+  /* Widths --> Media Queries*/
+  --container-width-lg: 80%;
+  --container-width-md: 86%;
+  --container-width-sm: 90%;
+
+  /* Navbar Height */
+  --navbar-height: 6rem;
+
+  /* Footer Height */
+  --footer-height: 28rem;
+}
+
+body {
+  font-family: 'PT Sans', sans-serif;
+  color: var(--color-light);
+  background-color: var(--color-bg);
+}
+
+h1 {
+  /* font-weight: 700; */
+  font-size: 2.5rem;
+  font-family: 'PT Mono', monospace;
+  text-transform: uppercase;
+}
+
+h2,
+h3,
+h4,
+h5 {
+  font-weight: 400;
+}
+
+.text-small {
+  color: var(--color-highlight);
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size: 0.5rem;
+}
+
+.is-hidden {
+  display: none;
+}
+
+a {
+  color: var(--color-primary);
+  font-weight: 700;
+  transition: var(--transition);
+}
+
+a:hover {
+  color: var(--color-secondary);
 }
